@@ -6325,3 +6325,6 @@ v0.92.0.11:
   - Fix force-explosion world setting not forcing explosions in towns.
   - API: Add WildernessMapEvent
     - Event which allows third-party plugins to change what is show on the ASCII map, in the wilderness.
+  - Fix /tw toggle plotcleardelete toggling the wrong feature.
+  - New Command: /tw toggle unclaimblockdelete {on|off} 
+    - Turns on/off the delete-blocks-on-unclaim feature in the world.
